--- a/paper/main.bib
+++ b/paper/main.bib
@@ -37,6 +37,7 @@
   volume       = {12079},
   pages        = {278--285},
   publisher    = {Springer},
+  address      = {Germany},
   year         = {2020},
   doi          = {10.1007/978-3-030-45237-7\_17},
 }
@@ -50,6 +51,7 @@
                   7-9, 2019},
   pages        = {19:1--19:15},
   publisher    = {{ACM}},
+  address      = {{USA}},
   year         = {2019},
   doi          = {10.1145/3354166.3354184},
 }
@@ -65,6 +67,7 @@
   volume       = {2152},
   pages        = {217--232},
   publisher    = {Springer},
+  address      = {Germany},
   year         = {2001},
   doi          = {10.1007/3-540-44755-5\_16},
 }
@@ -81,6 +84,7 @@
   volume       = {6269},
   pages        = {222--236},
   publisher    = {Springer},
+  address      = {Germany},
   year         = {2010},
   doi          = {10.1007/978-3-642-15375-4\_16},
 }
@@ -116,6 +120,7 @@
   pages     = {439-453},
   nodoi       = {http://dx.doi.org/10.1007/978-3-540-40007-3_26},
   publisher = {Springer},
+  address      = {Germany},
   series    = {LNCS 2757},
   note      = {Extended version available at \url{http://www.kb.ecei.tohoku.ac.jp/~koba/papers/tutorial-type-extended.pdf}},
 }
@@ -135,6 +140,7 @@
   volume       = {12719},
   pages        = {157--174},
   publisher    = {Springer},
+  address      = {Germany},
   year         = {2021},
   doi          = {10.1007/978-3-030-78089-0\_9},
 }
@@ -168,6 +174,7 @@
                   20-21, 2025},
   pages        = {257--271},
   publisher    = {{ACM}},
+  address      = {{USA}},
   year         = {2025},
   doi          = {10.1145/3703595.3705888},
 }
@@ -209,6 +216,7 @@
   volume       = {9032},
   pages        = {560--584},
   publisher    = {Springer},
+  address      = {Germany},
   year         = {2015},
   doi          = {10.1007/978-3-662-46669-8\_23},
 }
@@ -251,6 +259,7 @@
   volume       = {14676},
   pages        = {149--158},
   publisher    = {Springer},
+  address      = {Germany},
   year         = {2024},
   doi          = {10.1007/978-3-031-62697-5\_9},
 }
@@ -262,55 +271,6 @@
   publisher={Cambridge University Press},
   address={Cambridge, UK},
   doi = {10.1017/9781009000062},
-}
-
-@article{BravettiCZ18,
-  author       = {Mario Bravetti and
-                  Marco Carbone and
-                  Gianluigi Zavattaro},
-  title        = {On the boundary between decidability and undecidability of asynchronous
-                  session subtyping},
-  journal      = {Theor. Comput. Sci.},
-  volume       = {722},
-  pages        = {19--51},
-  year         = {2018},
-  url          = {https://doi.org/10.1016/j.tcs.2018.02.010},
-  doi          = {10.1016/J.TCS.2018.02.010},
-  timestamp    = {Wed, 14 Mar 2018 16:26:01 +0100},
-  biburl       = {https://dblp.org/rec/journals/tcs/BravettiCZ18.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{BravettiCZ17,
-  author       = {Mario Bravetti and
-                  Marco Carbone and
-                  Gianluigi Zavattaro},
-  title        = {Undecidability of asynchronous session subtyping},
-  journal      = {Inf. Comput.},
-  volume       = {256},
-  pages        = {300--320},
-  year         = {2017},
-  url          = {https://doi.org/10.1016/j.ic.2017.07.010},
-  doi          = {10.1016/J.IC.2017.07.010},
-  timestamp    = {Fri, 06 Oct 2017 16:39:39 +0200},
-  biburl       = {https://dblp.org/rec/journals/iandc/BravettiCZ17.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{BravettiZ21,
-  author       = {Mario Bravetti and
-                  Gianluigi Zavattaro},
-  title        = {Asynchronous session subtyping as communicating automata refinement},
-  journal      = {Softw. Syst. Model.},
-  volume       = {20},
-  number       = {2},
-  pages        = {311--333},
-  year         = {2021},
-  url          = {https://doi.org/10.1007/s10270-020-00838-x},
-  doi          = {10.1007/S10270-020-00838-X},
-  timestamp    = {Fri, 14 May 2021 08:32:44 +0200},
-  biburl       = {https://dblp.org/rec/journals/sosym/BravettiZ21.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{CairesPfenningToninho16,
@@ -326,107 +286,6 @@
   doi          = {10.1017/S0960129514000218},
 }
 
-@inproceedings{BocchiKM24,
-  author       = {Laura Bocchi and
-                  Andy King and
-                  Maurizio Murgia},
-  editor       = {Bernd Finkbeiner and
-                  Laura Kov{\'{a}}cs},
-  title        = {Asynchronous Subtyping by Trace Relaxation},
-  booktitle    = {Tools and Algorithms for the Construction and Analysis of Systems
-                  - 30th International Conference, {TACAS} 2024, Held as Part of the
-                  European Joint Conferences on Theory and Practice of Software, {ETAPS}
-                  2024, Luxembourg City, Luxembourg, April 6-11, 2024, Proceedings,
-                  Part {I}},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {14570},
-  pages        = {207--226},
-  publisher    = {Springer},
-  year         = {2024},
-  doi          = {10.1007/978-3-031-57246-3_12},
-}
-
-@article{BravettiCLYZ21,
-  author       = {Mario Bravetti and
-                  Marco Carbone and
-                  Julien Lange and
-                  Nobuko Yoshida and
-                  Gianluigi Zavattaro},
-  title        = {A Sound Algorithm for Asynchronous Session Subtyping and its Implementation},
-  journal      = {Log. Methods Comput. Sci.},
-  volume       = {17},
-  number       = {1},
-  year         = {2021},
-  url          = {https://lmcs.episciences.org/7238},
-  timestamp    = {Mon, 08 Mar 2021 17:46:18 +0100},
-  biburl       = {https://dblp.org/rec/journals/lmcs/BravettiCLYZ21.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
-}
-
-@inproceedings{LangeY17,
-  author       = {Julien Lange and
-                  Nobuko Yoshida},
-  editor       = {Javier Esparza and
-                  Andrzej S. Murawski},
-  title        = {On the Undecidability of Asynchronous Session Subtyping},
-  booktitle    = {Foundations of Software Science and Computation Structures - 20th
-                  International Conference, {FOSSACS} 2017, Held as Part of the European
-                  Joint Conferences on Theory and Practice of Software, {ETAPS} 2017,
-                  Uppsala, Sweden, April 22-29, 2017, Proceedings},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {10203},
-  pages        = {441--457},
-  year         = {2017},
-  doi          = {10.1007/978-3-662-54458-7_26},
-}
-
-@inproceedings{DeYoungCairesPfenningToninho12,
-  author       = {Henry DeYoung and
-                  Lu{\'{\i}}s Caires and
-                  Frank Pfenning and
-                  Bernardo Toninho},
-  editor       = {Patrick C{\'{e}}gielski and
-                  Arnaud Durand},
-  title        = {Cut Reduction in Linear Logic as Asynchronous Session-Typed Communication},
-  booktitle    = {Computer Science Logic (CSL'12) - 26th International Workshop/21st
-                  Annual Conference of the EACSL, {CSL} 2012, September 3-6, 2012, Fontainebleau,
-                  France},
-  series       = {LIPIcs},
-  volume       = {16},
-  pages        = {228--242},
-  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
-  year         = {2012},
-  doi          = {10.4230/LIPICS.CSL.2012.228},
-}
-
-@article{Padovani16,
-  author       = {Luca Padovani},
-  title        = {Fair subtyping for multi-party session types},
-  journal      = {Math. Struct. Comput. Sci.},
-  volume       = {26},
-  number       = {3},
-  pages        = {424--464},
-  year         = {2016},
-  doi          = {10.1017/S096012951400022X},
-}
-
-@inproceedings{Padovani13,
-  author       = {Luca Padovani},
-  editor       = {Fedor V. Fomin and
-                  Rusins Freivalds and
-                  Marta Z. Kwiatkowska and
-                  David Peleg},
-  title        = {Fair Subtyping for Open Session Types},
-  booktitle    = {Automata, Languages, and Programming - 40th International Colloquium,
-                  {ICALP} 2013, Riga, Latvia, July 8-12, 2013, Proceedings, Part {II}},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {7966},
-  pages        = {373--384},
-  publisher    = {Springer},
-  year         = {2013},
-  doi          = {10.1007/978-3-642-39212-2_34},
-}
-
 @article{DardhaGiachinoSangiorgi17,
   author    = {Ornela Dardha and
                Elena Giachino and
@@ -437,40 +296,6 @@
   pages     = {253--286},
   year      = {2017},
   doi       = {10.1016/j.ic.2017.06.002},
-}
-
-@inproceedings{MostrousYoshidaHonda09,
-  author       = {Dimitris Mostrous and
-                  Nobuko Yoshida and
-                  Kohei Honda},
-  editor       = {Giuseppe Castagna},
-  title        = {Global Principal Typing in Partially Commutative Asynchronous Sessions},
-  booktitle    = {Programming Languages and Systems, 18th European Symposium on Programming,
-                  {ESOP} 2009, Held as Part of the Joint European Conferences on Theory
-                  and Practice of Software, {ETAPS} 2009, York, UK, March 22-29, 2009.
-                  Proceedings},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {5502},
-  pages        = {316--332},
-  publisher    = {Springer},
-  year         = {2009},
-  doi          = {10.1007/978-3-642-00590-9_23},
-}
-
-@inproceedings{GuglielmiStrassburger01,
-  author       = {Alessio Guglielmi and
-                  Lutz Stra{\ss}burger},
-  editor       = {Laurent Fribourg},
-  title        = {Non-commutativity and {MELL} in the Calculus of Structures},
-  booktitle    = {Computer Science Logic, 15th International Workshop, {CSL} 2001. 10th
-                  Annual Conference of the EACSL, Paris, France, September 10-13, 2001,
-                  Proceedings},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {2142},
-  pages        = {54--68},
-  publisher    = {Springer},
-  year         = {2001},
-  doi          = {10.1007/3-540-44802-0_5},
 }
 
 @phdthesis{Doumane17,
@@ -500,91 +325,6 @@
   doi          = {10.4230/LIPICS.CSL.2016.42},
 }
 
-@book{Francez86,
-  author    = {Nissim Francez},
-  title     = {Fairness},
-  series    = {Texts and Monographs in Computer Science},
-  publisher = {Springer},
-  year      = {1986},
-  doi       = {10.1007/978-1-4612-4886-6},
-  isbn      = {978-3-540-96235-9},
-}
-
-@inproceedings{AptFrancezKatz87,
-  author    = {Krzysztof R. Apt and
-               Nissim Francez and
-               Shmuel Katz},
-  title     = {Appraising Fairness in Languages for Distributed Programming},
-  booktitle = {Conference Record of the Fourteenth Annual {ACM} Symposium on Principles
-               of Programming Languages, Munich, Germany, January 21-23, 1987},
-  pages     = {189--198},
-  publisher = {{ACM} Press},
-  year      = {1987},
-  doi       = {10.1145/41625.41642},
-}
-
-@inproceedings{GrumbergFrancezKatz84,
-  author = {Grumberg, Orna and Francez, Nissim and Katz, Shmuel},
-  title = {Fair Termination of Communicating Processes},
-  year = {1984},
-  isbn = {0897911431},
-  publisher = {Association for Computing Machinery},
-  address = {New York, NY, USA},
-  doi = {10.1145/800222.806752},
-  booktitle = {Proceedings of the Third Annual ACM Symposium on Principles of Distributed Computing},
-  pages = {254–265},
-  numpages = {12},
-  location = {Vancouver, British Columbia, Canada},
-  series = {PODC '84}
-}
-
-@article{ChenDezaniScalasYoshida17,
-  author       = {Tzu{-}Chun Chen and
-                  Mariangiola Dezani{-}Ciancaglini and
-                  Alceste Scalas and
-                  Nobuko Yoshida},
-  title        = {On the Preciseness of Subtyping in Session Types},
-  journal      = {Log. Methods Comput. Sci.},
-  volume       = {13},
-  number       = {2},
-  year         = {2017},
-  doi          = {10.23638/LMCS-13(2:12)2017},
-}
-
-@phdthesis{Mostrous10,
-  author       = {Dimitris Mostrous},
-  title        = {Session types in concurrent calculi : higher-order processes and objects},
-  school       = {Imperial College London, {UK}},
-  year         = {2010},
-  url          = {https://ethos.bl.uk/OrderDetails.do?uin=uk.bl.ethos.525598},
-}
-
-@article{MostrousYoshida15,
-  author       = {Dimitris Mostrous and
-                  Nobuko Yoshida},
-  title        = {Session typing and asynchronous subtyping for the higher-order {\(\pi\)}-calculus},
-  journal      = {Inf. Comput.},
-  volume       = {241},
-  pages        = {227--263},
-  year         = {2015},
-  doi          = {10.1016/J.IC.2015.02.002},
-}
-
-@article{GhilezanEtAl23,
-  author       = {Silvia Ghilezan and
-                  Jovanka Pantovic and
-                  Ivan Prokic and
-                  Alceste Scalas and
-                  Nobuko Yoshida},
-  title        = {Precise Subtyping for Asynchronous Multiparty Sessions},
-  journal      = {{ACM} Trans. Comput. Log.},
-  volume       = {24},
-  number       = {2},
-  pages        = {14:1--14:73},
-  year         = {2023},
-  doi          = {10.1145/3568422},
-}
-
 @inproceedings{HondaVasconcelosKubo98,
   author       = {Kohei Honda and
                   Vasco Thudichum Vasconcelos and
@@ -600,24 +340,9 @@
   volume       = {1381},
   pages        = {122--138},
   publisher    = {Springer},
+  address      = {Germany},
   year         = {1998},
   doi          = {10.1007/BFB0053567},
-}
-
-@inproceedings{HondaYoshidaCarbone08,
-  author    = {Kohei Honda and
-               Nobuko Yoshida and
-               Marco Carbone},
-  editor    = {George C. Necula and
-               Philip Wadler},
-  title     = {Multiparty asynchronous session types},
-  booktitle = {Proceedings of the 35th {ACM} {SIGPLAN-SIGACT} Symposium on Principles
-               of Programming Languages, {POPL} 2008, San Francisco, California,
-               USA, January 7-12, 2008},
-  pages     = {273--284},
-  publisher = {{ACM}},
-  year      = {2008},
-  doi       = {10.1145/1328438.1328472},
 }
 
 @inproceedings{Honda93,
@@ -630,6 +355,7 @@
   volume    = {715},
   pages     = {509--523},
   publisher = {Springer},
+  address      = {Germany},
   year      = {1993},
   doi       = {10.1007/3-540-57208-2_35},
 }
@@ -667,24 +393,6 @@
   doi          = {10.1016/J.JLAMP.2024.100986},
 }
 
-@book{KozenBook,
-  author       = {D. Kozen},
-  title        = {Automata and Computability},
-  publisher	   = {Springer, New York},
-  year         = {1997},
-}
-
-@article{Brzozowski64,
-  author       = {Janusz A. Brzozowski},
-  title        = {Derivatives of Regular Expressions},
-  journal      = {J. {ACM}},
-  volume       = {11},
-  number       = {4},
-  pages        = {481--494},
-  year         = {1964},
-  doi          = {10.1145/321239.321249},
-}
-
 @article{Wadler14,
   author    = {Philip Wadler},
   title     = {Propositions as sessions},
@@ -694,34 +402,6 @@
   pages     = {384--418},
   year      = {2014},
   doi       = {10.1017/S095679681400001X},
-}
-
-@inproceedings{LindleyMorris16,
-  author    = {Sam Lindley and
-               J. Garrett Morris},
-  editor    = {Jacques Garrigue and
-               Gabriele Keller and
-               Eijiro Sumii},
-  title     = {Talking bananas: structural recursion for session types},
-  booktitle = {Proceedings of the 21st {ACM} {SIGPLAN} International Conference on
-               Functional Programming, {ICFP} 2016, Nara, Japan, September 18-22,
-               2016},
-  pages     = {434--447},
-  publisher = {{ACM}},
-  year      = {2016},
-  doi       = {10.1145/2951913.2951921},
-}
-
-@article{GlabbeekHofner19,
-  author    = {Rob van Glabbeek and
-               Peter H{\"{o}}fner},
-  title     = {Progress, Justness, and Fairness},
-  journal   = {{ACM} Comput. Surv.},
-  volume    = {52},
-  number    = {4},
-  pages     = {69:1--69:38},
-  year      = {2019},
-  doi       = {10.1145/3329125},
 }
 
 @inproceedings{McBride18,
@@ -752,6 +432,7 @@
                   20-21, 2020},
   pages        = {284--298},
   publisher    = {{ACM}},
+  address      = {{USA}},
   year         = {2020},
   doi          = {10.1145/3372885.3373818},
 }
@@ -764,26 +445,9 @@
                   of Declarative Programming, Bologna, Italy, 9-10 September, 2020},
   pages        = {8:1--8:14},
   publisher    = {{ACM}},
+  address      = {{USA}},
   year         = {2020},
   doi          = {10.1145/3414080.3414109},
-}
-
-@inproceedings{CicconePadovani22C,
-  author       = {Luca Ciccone and
-                  Luca Padovani},
-  editor       = {Bartek Klin and
-                  Slawomir Lasota and
-                  Anca Muscholl},
-  title        = {An Infinitary Proof Theory of Linear Logic Ensuring Fair Termination
-                  in the Linear {\(\pi\)}-Calculus},
-  booktitle    = {33rd International Conference on Concurrency Theory, {CONCUR} 2022,
-                  September 12-16, 2022, Warsaw, Poland},
-  series       = {LIPIcs},
-  volume       = {243},
-  pages        = {36:1--36:18},
-  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
-  year         = {2022},
-  doi          = {10.4230/LIPICS.CONCUR.2022.36},
 }
 
 @inproceedings{DagninoPadovani24,
@@ -800,181 +464,9 @@
                   9-11, 2024},
   pages        = {4:1--4:13},
   publisher    = {{ACM}},
+  address      = {{USA}},
   year         = {2024},
   doi          = {10.1145/3678232.3678234},
-}
-
-@article{CicconeDagninoPadovani24,
-  author       = {Luca Ciccone and
-                  Francesco Dagnino and
-                  Luca Padovani},
-  title        = {Fair termination of multiparty sessions},
-  journal      = {J. Log. Algebraic Methods Program.},
-  volume       = {139},
-  pages        = {100964},
-  year         = {2024},
-  doi          = {10.1016/J.JLAMP.2024.100964},
-}
-
-@article{DasPfenning22,
-  author       = {Ankush Das and
-                  Frank Pfenning},
-  title        = {Rast: {A} Language for Resource-Aware Session Types},
-  journal      = {Log. Methods Comput. Sci.},
-  volume       = {18},
-  number       = {1},
-  year         = {2022},
-  doi          = {10.46298/LMCS-18(1:9)2022},
-}
-
-@inproceedings{DasEtAl21,
-  author       = {Ankush Das and
-                  Stephanie Balzer and
-                  Jan Hoffmann and
-                  Frank Pfenning and
-                  Ishani Santurkar},
-  title        = {Resource-Aware Session Types for Digital Contracts},
-  booktitle    = {34th {IEEE} Computer Security Foundations Symposium, {CSF} 2021, Dubrovnik,
-                  Croatia, June 21-25, 2021},
-  pages        = {1--16},
-  publisher    = {{IEEE}},
-  year         = {2021},
-  doi          = {10.1109/CSF51468.2021.00004},
-}
-
-@inproceedings{DasHoffmannPfenning18,
-  author       = {Ankush Das and
-                  Jan Hoffmann and
-                  Frank Pfenning},
-  editor       = {Anuj Dawar and
-                  Erich Gr{\"{a}}del},
-  title        = {Work Analysis with Resource-Aware Session Types},
-  booktitle    = {Proceedings of the 33rd Annual {ACM/IEEE} Symposium on Logic in Computer
-                  Science, {LICS} 2018, Oxford, UK, July 09-12, 2018},
-  pages        = {305--314},
-  publisher    = {{ACM}},
-  year         = {2018},
-  doi          = {10.1145/3209108.3209146},
-}
-
-@inproceedings{Padovani22,
-  author       = {Luca Padovani},
-  editor       = {Delia Kesner and
-                  Pierre{-}Marie P{\'{e}}drot},
-  title        = {On the Fair Termination of Client-Server Sessions},
-  booktitle    = {28th International Conference on Types for Proofs and Programs, {TYPES}
-                  2022, June 20-25, 2022, LS2N, University of Nantes, France},
-  series       = {LIPIcs},
-  volume       = {269},
-  pages        = {5:1--5:21},
-  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
-  year         = {2022},
-  doi          = {10.4230/LIPICS.TYPES.2022.5},
-}
-
-@article{BravettiLangeZavattaro24,
-  author       = {Mario Bravetti and
-                  Julien Lange and
-                  Gianluigi Zavattaro},
-  title        = {Fair Asynchronous Session Subtyping},
-  journal      = {Log. Methods Comput. Sci.},
-  volume       = {20},
-  number       = {4},
-  year         = {2024},
-  doi          = {10.46298/LMCS-20(4:5)2024},
-}
-
-@inproceedings{BravettiLangeZavattaro21,
-  author       = {Mario Bravetti and
-                  Julien Lange and
-                  Gianluigi Zavattaro},
-  editor       = {Stefan Kiefer and
-                  Christine Tasson},
-  title        = {Fair Refinement for Asynchronous Session Types},
-  booktitle    = {Foundations of Software Science and Computation Structures - 24th
-                  International Conference, {FOSSACS} 2021, Held as Part of the European
-                  Joint Conferences on Theory and Practice of Software, {ETAPS} 2021,
-                  Luxembourg City, Luxembourg, March 27 - April 1, 2021, Proceedings},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {12650},
-  pages        = {144--163},
-  publisher    = {Springer},
-  year         = {2021},
-  doi          = {10.1007/978-3-030-71995-1_8},
-}
-
-@inproceedings{CicconeDagninoPadovani22,
-  author       = {Luca Ciccone and
-                  Francesco Dagnino and
-                  Luca Padovani},
-  editor       = {Karim Ali and
-                  Jan Vitek},
-  title        = {Fair Termination of Multiparty Sessions},
-  booktitle    = {36th European Conference on Object-Oriented Programming, {ECOOP} 2022,
-                  June 6-10, 2022, Berlin, Germany},
-  series       = {LIPIcs},
-  volume       = {222},
-  pages        = {26:1--26:26},
-  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
-  year         = {2022},
-  doi          = {10.4230/LIPICS.ECOOP.2022.26},
-}
-
-@inproceedings{AnconaDagninoZucca17,
-  author       = {Davide Ancona and
-                  Francesco Dagnino and
-                  Elena Zucca},
-  editor       = {Hongseok Yang},
-  title        = {Generalizing Inference Systems by Coaxioms},
-  booktitle    = {Programming Languages and Systems - 26th European Symposium on Programming,
-                  {ESOP} 2017, Held as Part of the European Joint Conferences on Theory
-                  and Practice of Software, {ETAPS} 2017, Uppsala, Sweden, April 22-29,
-                  2017, Proceedings},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {10201},
-  pages        = {29--55},
-  publisher    = {Springer},
-  year         = {2017},
-  doi          = {10.1007/978-3-662-54434-1_2},
-}
-
-@article{Dagnino19,
-  author       = {Francesco Dagnino},
-  title        = {Coaxioms: flexible coinductive definitions by inference systems},
-  journal      = {Log. Methods Comput. Sci.},
-  volume       = {15},
-  number       = {1},
-  year         = {2019},
-  doi          = {10.23638/LMCS-15(1:26)2019},
-}
-
-@inproceedings{Gay16,
-  author       = {Simon J. Gay},
-  editor       = {Sam Lindley and
-                  Conor McBride and
-                  Philip W. Trinder and
-                  Donald Sannella},
-  title        = {Subtyping Supports Safe Session Substitution},
-  booktitle    = {A List of Successes That Can Change the World - Essays Dedicated to
-                  Philip Wadler on the Occasion of His 60th Birthday},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {9600},
-  pages        = {95--108},
-  publisher    = {Springer},
-  year         = {2016},
-  doi          = {10.1007/978-3-319-30936-1_5},
-}
-
-@article{LiskovWing94,
-  author       = {Barbara Liskov and
-                  Jeannette M. Wing},
-  title        = {A Behavioral Notion of Subtyping},
-  journal      = {{ACM} Trans. Program. Lang. Syst.},
-  volume       = {16},
-  number       = {6},
-  pages        = {1811--1841},
-  year         = {1994},
-  doi          = {10.1145/197320.197383},
 }
 
 @article{Courcelle83,
@@ -997,28 +489,4 @@
   pages        = {191--225},
   year         = {2005},
   doi          = {10.1007/S00236-005-0177-Z},
-}
-
-@article{CicconePadovani22A,
-  author       = {Luca Ciccone and
-                  Luca Padovani},
-  title        = {Fair termination of binary sessions},
-  journal      = {Proc. {ACM} Program. Lang.},
-  volume       = {6},
-  number       = {{POPL}},
-  pages        = {1--30},
-  year         = {2022},
-  doi          = {10.1145/3498666},
-}
-
-@article{CicconePadovani22B,
-  author       = {Luca Ciccone and
-                  Luca Padovani},
-  title        = {Inference Systems with Corules for Combined Safety and Liveness Properties
-                  of Binary Session Types},
-  journal      = {Log. Methods Comput. Sci.},
-  volume       = {18},
-  number       = {3},
-  year         = {2022},
-  doi          = {10.46298/LMCS-18(3:27)2022},
 }
